	- Add SSL_CTX_set_ciphersuites and SSL_set_ciphersuites for
	  configuring the available TLSv1.3 ciphersuites. Add tests in
	  43_misc_functions.t and clarify SSL_client_version tests.
	- Add SSL_CTX_set_security_level, SSL_CTX_get_security_level,
	  SSL_set_security_level and SSL_get_security_level.
	  Add new test file 65_security_level.t.
	  All courtesy of Damyan Ivanov of Debian project.
	- Add RAND_priv_bytes. Add new test file t/local/10_rand.t for
	  RAND_bytes, RAND_pseudo_bytes, RAND_priv_bytes, RAND_status,
	  RAND_poll, RAND_file_name and RAND_load_file.
	- Update documentation for RAND_*bytes return values and
	  RAND_file_name behaviour with LibreSSL.
	- Add SSL_SESSION_is_resumable. Add and update tests in 44_sess.t.
	- Set OpenSSL security level to 1 in tests that use the test suite's
	  (1024-bit) RSA keys, which allows the test suite to pass when
	  Net-SSLeay is built against an OpenSSL with a higher default
	  security level. Fixes RT#126987. Thanks to Petr Pisar (in
	  RT#126270) and Damyan Ivanov (in RT#126987) for the reports and
	  patches, and to Damyan Ivanov for the preferred patch.
	- Add SSL_CTX_sess_set_new_cb and SSL_CTX_sess_set_remove_cb.
	  Add new test file 44_sess.t for these and future session
	  related tests for which no specific test file is needed.
	- Add SSL_get_version, SSL_client_version and SSL_is_dtls.
	- Add SSL_peek_ex, SSL_read_ex, SSL_write_ex and SSL_has_pending.
	  Add tests in t/local/11_read.t
	- Enhance t/local/43_misc_functions.t get_keyblock_size test
	  to work better with AEAD ciphers.
	- Add constants SSL_OP_ENABLE_MIDDLEBOX_COMPAT and
	  SSL_OP_NO_ANTI_REPLAY for TLSv1.3
	- Fix compile time DEFINE=-DSHOW_XS_DEBUG to work with
	  non-threaded Perls. Fixes RT#127027. Thanks to SREZIC for
	  the report. Also fix other minor compile warnings.

1.86_05 2018-08-22
	- Net-SSLeay now requires at least Perl 5.8.1. This is a
	  formalisation of what has been the de facto case for some time,